--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,13 +15,14 @@ torch = "^2.0.0"
 ipykernel = "^6.29.2"
 wandb = "^0.16.3"
 scikit-misc = "^0.3.1"
-scikit-learn = "^0.24"
 pyitlib = "^0.2.3"
 faiss-cpu = "1.9.0"
 scib-metrics = "^0.5.1"
 jupyter = "^1.0.0"
 pytorch-lightning = "^2.0.0"
+pip:
+    scikit-learn = "^0.24"
 
 [build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+requires = ["poetry-core", "setuptools", "wheel", "cython"]
+build-backend = "setuptools.build_meta"
