--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,12 +15,13 @@ torch = "^2.0.0"
 ipykernel = "^6.29.2"
 wandb = "^0.16.3"
 scikit-misc = "^0.3.1"
-pyitlib = "^0.2.3"
 faiss-cpu = "1.9.0"
 scib-metrics = "^0.5.1"
 jupyter = "^1.0.0"
 pytorch-lightning = "^2.0.0"
-scikit-learn = "^0.24"
+scikit-learn = "^1.2.0"
+wheel = "^0.37.0"
+setuptools = "^58.0.4"
 
 [build-system]
 requires = ["poetry-core", "setuptools", "wheel", "cython"]
