--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,9 @@ scikit-learn = "^1.2.0"
 wheel = "^0.37.0"
 setuptools = "^58.0.4"
 
+[tool.poetry.dev-dependencies]
+pytest = "^7.4.0"
+
 [build-system]
 requires = ["poetry-core", "setuptools", "wheel", "cython"]
 build-backend = "setuptools.build_meta"
